tests/toylang/neg/001439_mutation.toylang
program a = { var a : int a; } .
